@@ -3,3 +3,4 @@ Chase Whitener <capoeirab@cpan.org> <cwhitener@gmail.com>
 Chase Whitener <capoeirab@cpan.org> <chase.whitener@infotechfl.com>
 David Steinbrunner <dsteinbrunner@pobox.com> <dsteinbrunner@MountainBook-Pro.local>
 Max Maischein <corion@cpan.org> <corion@corion.net>
+Alastair Douglas <altreus@altre.us> <alastair.mcgowan@opusvl.com>
