@@ -48,12 +48,15 @@
     <input type="hidden" name="5e" value="value" />
 </form>
 
-<form action="http://localhost/" method="post" name="3rd_form">
+<form action="http://localhost/" method="post" name="6th_form">
     <select name="select">
-        <option value="1">Option 1</option>
-        <option value="2">Option 2</option>
-        <option value="3">Option 3</option>
+        <option value="one">Option 1</option>
+        <option value="two">Option 2</option>
+        <option value="three">Option 3</option>
     </select>
+    <input type="radio" name="radio" value="foo">
+    <input type="radio" name="radio" value="bar">
+    <input type="radio" name="radio" value="baz">
     <input type="Submit" name="submit" value="Submit" label="Sumbit" />
 </form>
 
